--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "google_api"
 version = "0.0.1"
 authors = ["Aleksey Minkin <a.minkin@devcaz.com>"]
 edition = "2018"
+exclude = [".idea/"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
